<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:gravity="center_horizontal"
        android:text="@string/search_name"
        android:textSize="@dimen/favorite_title_size"
        android:textStyle="bold"
        android:textColor="@color/colorBlack"/>

        <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="5dp"
        android:layout_margin="5dp"
        android:focusable="true"
        android:focusableInTouchMode="true">

            <FrameLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1">
                <EditText
                    android:id="@+id/SearchEditText"
                    style="@style/EditText.Search"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/shape_rounded_edittext"
                    android:drawableLeft="@drawable/ic_search_solid"
                    android:hint="@string/search_hint"
                    android:inputType="textNoSuggestions"
                    android:theme="@style/EditText.Search"
                    />

                <Button
                    android:id="@+id/clearButton"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_gravity="end|center_vertical"
                    android:layout_marginRight="10dp"
                    android:background="@drawable/ic_times_circle_regular" />
            </FrameLayout>

            <Button
                android:id="@+id/cancelButton"
                android:text="@string/cancel_button"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginStart="10dp"
                android:layout_weight="0"
                android:background="@drawable/shape_rounded_edittext" />

        </LinearLayout>
        <android.support.v4.view.ViewPager
            android:id="@+id/search_viewpager"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        </android.support.v4.view.ViewPager>
</LinearLayout>